<resources>
    <!-- MainActivity -->
    <string name="app_name">Primera App en Android</string>
    <string name="textview_text_user">Usuario</string>
    <string name="textview_text_password">Contraseña</string>
    <string name="edittext_hint_user">Ingrese el usuario</string>
    <string name="edittext_hint_password">Ingrese su contraseña</string>
    <string name="button_text_ok">Aceptar</string>
    <!-- SecondActivity -->
    <string name="textViewMessage_text">Esto pasa del primer formulario: </string>"
    <string name="button_text_browser">Navegar</string>"
    <string name="button_text_call">Llamar</string>"
    <string name="button_text_googleMaps">Google Maps</string>"
    <string name="button_text_showThirdActivity">Mostrar Activity</string>"
    <string name="button_text_close">Cerrar</string>"
</resources>